fix mid section alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -195,6 +195,7 @@ font-family: "Montserrat", sans-serif;
     float: right;
     width: 30%;
     margin-right: 50px;
+    margin-top: -35px;
     
 
 }
@@ -219,6 +220,10 @@ font-family: "Montserrat", sans-serif;
     font-weight: 900;
     font-size: 20px;
     padding-bottom: 10px;
+}
+
+#price {
+    margin-top: 150px;
 }
 
 #logo-mid {
